updated api schema, added migrations
